--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "build": "npm install"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@chainlink/contracts": "0.0.11"
+  }
 }
