--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "erc20draft",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "truffle.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
-    "build": "npm install"
+    "build": "npm install",
+    "dev": "lite-server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@chainlink/contracts": "0.0.11"
+    "@chainlink/contracts": "0.0.11",
+    "lite-server": "^2.3.0"
   }
 }
