--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@chainlink/contracts": "0.0.11"
+    "@chainlink/contracts": "0.0.11",
+    "lite-server": "^2.6.1"
   }
 }
